# sql-prettifier

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/sql_prettifier/: __init__.py  core.py
tests/: test_formatter.py
