[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39']
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
known_third_party = ["setuptools", "wheel"]

[tool.flake8]
ignore = "E203, E266, E501, W503, F403, F401"
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4,B9"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=./ --cov-report=xml --cov-report=term"